--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "prepublish": "npm run build",
     "start": "webpack -w",
-    "build": "webpack -p"
+    "build": "webpack --define process.env.NODE_ENV=\"production\""
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
